--- a/api/view/login.ejs
+++ b/api/view/login.ejs
@@ -43,10 +43,12 @@
     
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" name="senha" required>
+                
             </form>
+            <a href="/"><button type="submit" class="Enviar">Enviar</button></a>
         </div>
     </div>
-<hr>
+
 
     
 </body>
