--- a/api/view/login.ejs
+++ b/api/view/login.ejs
@@ -18,9 +18,9 @@
 
     <div class="login-coluns2">
         <div class="logo">
-            <img src="/imagens/logo.png" alt="">
+            <a href="\landingPage"><img src="/imagens/logo.png" alt=""></a>
         </div>
-        <div><h2 class="logo2">nixy</h2></div>
+        <div><a href="\landingPage"><h2 class="logo2">nixy</h2></div></a>
     </div>
     
 
@@ -35,17 +35,18 @@
 
         <div class="formulario">
             <form>
-                <label for="nome">Nome completo</label>
-                <input type="text" id="nome" name="nome" required>
+                <label class="loginRequisito" for="nome">Nome completo</label>
+                <input class="login" type="text" id="nome" name="nome" required>
     
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
+                <label class="loginRequisito" for="email">Email</label>
+                <input class="login" type="email" id="email" name="email" required>
     
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" required>
+                <label class="loginRequisito" for="senha">Senha</label>
+                <input class="login" type="password" id="senha" name="senha" required>
                 
             </form>
-            <a href="/"><button type="submit" class="Enviar">Enviar</button></a>
+            <a href="/cadastro"><button type="submit" href="" class="Enviar">Enviar</button></a>
+            <a href="/cadastro">Ja tem contra? entrar</a>
         </div>
     </div>
 
