--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -9,11 +9,64 @@ body {
     
 }
 
+/* header */
+
 .cabecalho{
     width: 100%;
-    height: 200px;
+    height: 150px;
     background-color: #1C1746;
+    display: flex; 
+    align-items: left;
+    gap: 10px;
 }
+
+.cabecalhoLogo{
+    width: 150px;
+}
+
+.NixyCabecalho{
+    
+    font-family: "Inspiration", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #81BBE7;
+    font-size: 100px;
+    
+}
+
+.menu{
+    display: flex;
+    margin-left: 15%;
+    margin-top: 3%;
+    list-style-type: none;
+    
+}
+
+.menu li{
+    
+}
+
+.menu li a{
+    color: white;
+    font-size: 18px;
+    padding: 10px 15px;
+    transition: 0.3s;
+    text-decoration: none;
+}
+
+.menu li a:hover {
+    color: #81BBE7;
+    border-radius: 5px;
+}
+
+/* aqui a landing page */
+
+.meioLandingPage{
+    width: 100%;
+    height: 600px;
+    background-color: #461B7A;
+}
+
 
 /* login */
 
@@ -30,7 +83,7 @@ body {
 
 .logo2{
     
-    font-family: "Inspiration", cursive;
+    font-family: "Inspiration";
     font-weight: 400;
     font-style: normal;
     color: #81BBE7;
@@ -69,12 +122,12 @@ form {
     flex-direction: column;
 }
 
-label {
+.loginRequisito {
     margin-bottom: 5px;
     font-weight: bold;
 }
 
-input {
+.login {
     border: none;
     border-bottom: 1px solid #6C6464;
     padding: 8px;
@@ -84,7 +137,7 @@ input {
     width: 90%;
 }
 
-input:focus {
+.login:focus {
     border-bottom: 2px solid #007BFF;
 }
 
@@ -96,4 +149,135 @@ input:focus {
     border-radius: 5%;
     font-size: 20px;
     margin-right: 10%;
+}
+
+
+/* cadastro */
+
+
+.alinharLogo{
+    display: flex; 
+    align-items: center;
+    gap: 10px;
+}
+
+.logo3{
+    font-family: "Inspiration", cursive;
+    font-weight: 400;
+    font-style: normal;
+    color: #81BBE7;
+    font-size: 80px;
+}
+
+.centralizar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+}
+
+.imgDireita {
+    margin-top: 20%;
+    width: 25%; 
+    max-width: 300px;
+}
+
+.imgE{
+    position: relative;
+    width: 25%; 
+    max-width: 300px;
+    margin-right: 50px;
+    margin-bottom: 10%;
+    z-index: auto;
+}
+
+
+.login-box {
+    background-color: #DEDCE9;
+    padding: 40px;
+    border-radius: 15px;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.1);
+    height: 600px;
+    width: 500px;
+    text-align: center;
+    margin-top: 5%;
+    
+}
+
+.logoCadastro {
+    width: 90px;
+    margin-bottom: 10px;
+    display: block;
+    margin-left: 0;
+
+}
+
+.h1Cadastro {
+    font-size: 30px;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: left;
+    width: 100%;
+}
+
+
+p {
+    font-size: 14px;
+    color: #444;
+    text-align: left;
+    width: 100%;
+}
+
+.Acadastro {
+    color: #475BE2;
+    text-decoration: none;
+    font-weight: 500;
+}
+
+form {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.CadastroRequisito {
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 10px;
+}
+
+.formCadastro {
+    width: 95%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 0.5px solid #6C6464;
+    border-radius: 5px;
+    font-size: 14px;
+    background-color: #DEDCE9;
+    height: 20px;
+}
+
+.forgot-password {
+    text-align: right;
+    width: 100%;
+    margin-top: 5px;
+}
+
+.login-btn {
+    background-color: #D6A4EF;
+    color: black;
+    font-size: 16px;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    width: 100%;
+    margin-top: 40px;
+    font-weight: bold;
+}
+
+.login-btn:hover {
+    background-color: #B286E0;
 }
