alteração landing page

--- a/api/view/landingPage.ejs
+++ b/api/view/landingPage.ejs
@@ -3,15 +3,23 @@
 <main>
     
   
-  <div class="meioLandingPage">
-
-    <div class="mensagem">
+   <div class="meioLandingPage">
+    <section>
+      <div class="mensagem">
         <h1>Transforme seu esforço <br> em conquistas</h1>
-        <p> Nyxi plataforma dedicada e feita para estudantes.
+        <p> Nyxi plataforma dedicada <br>
+          e feita para estudantes. <br>
             Junte-se a nós</p>
-    </div>
+      </div>
+      <div class="botaos">
+        <button class="butao1">cadastre-se!</button>
+        <button class="butao2">login</button>
+      </div>
+    </section>
     
-    <div class="quadrados">
+
+    <section>
+      <div class="quadrados">
         <div class="quadrado1">
 
         </div>
@@ -19,6 +27,8 @@
 
         </div>
     </div>
+    </section>
+    
 
   </div>
 </main>
