--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -13,15 +13,17 @@ body {
 
 .cabecalho{
     width: 100%;
-    height: 150px;
+    height: 100px;
     background-color: #1C1746;
     display: flex; 
     align-items: left;
     gap: 10px;
+    
+    
 }
 
 .cabecalhoLogo{
-    width: 150px;
+    width: 110px;
 }
 
 .NixyCabecalho{
@@ -30,25 +32,26 @@ body {
     font-weight: 400;
     font-style: normal;
     color: #81BBE7;
-    font-size: 100px;
+    font-size: 70px;
     
 }
 
 .menu{
     display: flex;
     margin-left: 15%;
-    margin-top: 3%;
+    margin-top: 2%;
     list-style-type: none;
+    
     
 }
 
 .menu li{
+    font-size: 25px;
     
 }
 
 .menu li a{
     color: white;
-    font-size: 18px;
     padding: 10px 15px;
     transition: 0.3s;
     text-decoration: none;
@@ -65,8 +68,60 @@ body {
     width: 100%;
     height: 600px;
     background-color: #461B7A;
+    display: grid;
+    justify-content: center; 
+    align-items: center;    
+   
 }
 
+.mensagem h1{
+    color: #81BBE7;
+    margin-bottom: 10%;
+    font-size: 40px;
+}
+
+.mensagem p{
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.butao1 {
+    background-color: #81BBE7;
+    border-radius: 15%;
+    width: 30%;
+    height: 40px;
+}
+
+.butao2 {
+    background-color: #81BBE7;
+    border-radius: 15%;
+    width: 30%;
+    height: 40px;
+    margin-left: 5%;
+    margin-top: 5%;
+ }
+.quadrados{
+    position: relative;
+}
+
+.quadrado1{
+    width: 120px;
+    height: 150px;
+    background-color: #A87EB9;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
+    margin-bottom: 20px;
+    border-radius: 10%;
+}
+
+.quadrado2{
+    width: 20px;
+    height: 200px;
+    background-color: #A87EB9;
+    clip-path: polygon(0% 0%, 100% 0%, 100% 85%, 50% 100%, 0% 85%);
+    margin-bottom: 20px;
+    border-radius: 10%;
+}
 
 /* login */
 
@@ -222,7 +277,7 @@ form {
 }
 
 
-p {
+.pCadastro {
     font-size: 14px;
     color: #444;
     text-align: left;
