--- a/api/view/cadastro.ejs
+++ b/api/view/cadastro.ejs
@@ -28,7 +28,7 @@
             </div>
             <h1 class="h1Cadastro">Bem vindo de volta <br> ao <span class="highlight">Nixy</span></h1>
             
-            <p> Novo aqui? <a class="Acadastro" href="/login">criar nova conta</a></p>
+            <p class="pCadastro"> Novo aqui? <a class="Acadastro" href="/login">criar nova conta</a></p>
 
             <form>
                 <label class="CadastroRequisito" for="email">Email</label>
