--- a/api/view/anotacoes.ejs
+++ b/api/view/anotacoes.ejs
@@ -1,13 +1,17 @@
 <%- include('partials/header', { title: 'Página Inicial' }) %>
+
+
 <div class="alinhaMenu">
     <%- include('partials/menuItens') %> 
 
 
     <main>
     
-        <p class="aaaaaaaaaaa">index principal</p>
+        <p class="aaaaaaaaaaa">minhas coisinhas anotaciones</p>
     </main>
 </div>
+
+
 
 </body>
 </html>
