--- a/api/view/partials/footer.ejs
+++ b/api/view/partials/footer.ejs
@@ -1,5 +1,34 @@
-<footer>
-    <p>&copy; 2025 Nixy</p>
+<footer class="">
+
+    <div class="alinharFooter">
+        <div class="footer-section">
+            <h3>Nixy</h3>
+            <ul>
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Fóruns</a></li>
+                <li><a href="#">Comece a estudar agora</a></li>
+            </ul>
+        </div>
+    
+        <div class="footer-section">
+            <h3>Redes sociais.</h3>
+        </div>
+    
+        <div class="footer-section">
+            <h3>Email</h3>
+        </div>
+
+    </div>
+
+    <hr class="linha">
+
+    <div class="footer-embaixo">
+        <div class="logo">
+            <span class="logo-text">Logo</span> Nixy
+        </div>
+        <span>&copy; 2025 Nixy</span>
+    </div>
+    
 </footer>
 </body>
 </html>
