--- a/api/view/partials/header.ejs
+++ b/api/view/partials/header.ejs
@@ -19,13 +19,15 @@
     <header>
         <header>
             <div class="cabecalho">
-                <a href="\landingPage"><img class="cabecalhoLogo" src="/imagens/logo.png" alt=""></a>
-                <a href="\landingPage"><h2 class="NixyCabecalho">nixy</h2></a>
+                <div class="LogoPrincipal">
+                    <a href="\landingPage"><img class="cabecalhoLogo" src="/imagens/logo.png" alt=""></a>
+                    <a href="\landingPage"><h2 class="NixyCabecalho">nixy</h2></a>
+                </div>
 
                 <ul class="menu">
                     <li><a href="">Home</a></li>
                     <li><a href="">Sobre nós</a></li>
-                    <li><a href="">Inicio</a></li>
+                    <li><a href="/">Inicio</a></li>
                 </ul>
             </div>
             
