--- a/api/view/pomodoro.ejs
+++ b/api/view/pomodoro.ejs
@@ -5,7 +5,7 @@
 
     <main>
     
-        <p class="aaaaaaaaaaa">index principal</p>
+        <p class="aaaaaaaaaaa">Pomodoro</p>
     </main>
 </div>
 
