--- a/api/view/estatisticas.ejs
+++ b/api/view/estatisticas.ejs
@@ -1,9 +1,10 @@
 <%- include('partials/header', { title: 'Página Inicial' }) %>
+<%- include('partials/header2') %>
 <div class="alinhaMenu">
     <%- include('partials/menuItens') %> 
 
 
-    <main>
+    <main class="conteudo">
     
         <p class="aaaaaaaaaaa">estatisticas</p>
     </main>
