--- a/api/view/landingPage.ejs
+++ b/api/view/landingPage.ejs
@@ -33,7 +33,7 @@
   <section class="AlinharLandingPage">
     <div class="comeceEstudar">
       <img src="/imagens/Icone.png" alt="Ícone de estudo" class="icon">
-      <h2>Comece a estudar de graça</h2>
+      <h2>Comece a estudar <br>de graça</h2>
 
       <button class="LPbtn">Começar agora</button>
 
