--- a/api/view/partials/footer.ejs
+++ b/api/view/partials/footer.ejs
@@ -24,9 +24,9 @@
 
     <div class="footer-embaixo">
         <div class="logo">
-            <span class="logo-text">Logo</span> Nixy
+            <span class="logo-text">Nixy</span> 
         </div>
-        <span>&copy; 2025 Nixy</span>
+        <span class="direitosA">&copy; 2025 Nixy</span>
     </div>
     
 </footer>
