--- a/api/view/anotacoes.ejs
+++ b/api/view/anotacoes.ejs
@@ -1,11 +1,11 @@
 <%- include('partials/header', { title: 'Página Inicial' }) %>
-
+<%- include('partials/header2') %>
 
 <div class="alinhaMenu">
     <%- include('partials/menuItens') %> 
 
 
-    <main>
+    <main class="conteudo">
     
         <p class="aaaaaaaaaaa">minhas coisinhas anotaciones</p>
     </main>
