--- a/api/view/index.ejs
+++ b/api/view/index.ejs
@@ -1,4 +1,5 @@
 <%- include('partials/header', { title: 'Página Inicial' }) %>
+<%- include('partials/header2') %>
 <div class="alinhaMenu">
     <%- include('partials/menuItens') %> 
 
