--- a/api/view/novaSenha.ejs
+++ b/api/view/novaSenha.ejs
@@ -16,9 +16,7 @@
 <body>
     <main class="centralizar">
 
-        <div class="imgE">
-            <img src="/imagens/pe.png" alt="" class="imgEsquerda">
-        </div>
+      
 
         <div class="login-box">
 
@@ -26,26 +24,29 @@
                 <a href="\landingPage"><img src="/imagens/logo.png" alt="Logo Nixy" class="logoCadastro"></a>
               <a href="\landingPage">  <h2 class="logo3">nixy</h2></a>
             </div>
-            <h1 class="h1Cadastro">Bem vindo de volta <br> ao <span class="highlight">Nixy</span></h1>
+            <br>
+            <br>
+            <h1 class="h1Cadastro">Redefinir Senha</span></h1>
+            <% if (mensagem) { %>
+                <p><%= mensagem %></p>
+              <% } %>
             
-            <p class="pCadastro"> Novo aqui? <a class="Acadastro" href="/cadastro">criar nova conta</a></p>
 
-            <form id="loginForm" method="POST" action="/login">
-                <label class="CadastroRequisito" for="email">Email</label>
-                <input class="formCadastro" type="email" id="email" name="email" required>
+              <form method="POST" action="/resetarSenha/<%= token %>">
+                    <label class="CadastroRequisito" for="senha">Nova senha</label>
+                    <input class="formCadastro" type="password" id="senha" name="senha" required>
+                
+                    <label class="CadastroRequisito" for="confirmarSenha">Confirmar nova senha</label>
+                    <input class="formCadastro" type="password" id="confirmarSenha" name="confirmarSenha" required>
+                
+                    <button type="submit" class="login-btn">Atualizar senha</button>
+              </form>
 
-                <label class="CadastroRequisito" for="senha">Senha</label>
-                <input class="formCadastro" type="password" id="senha" name="senha" required>
-
-                <div class="forgot-password">
-                    <a class="Acadastro" href="/esqueciAsenha">Esqueceu a senha?</a>
-                </div>
-
-                <button type="submit" class="login-btn">Login</button>
-            </form>
         </div>
 
-        <img src="/imagens/sentado.png" alt="" class="imgDireita">
+        
+
+        
     </main>
 </body>
 </html>
