--- a/api/view/partials/menuItens.ejs
+++ b/api/view/partials/menuItens.ejs
@@ -1,11 +1,13 @@
 <aside class="sidebar">
-    <div class="usuario">
-        <div class="usuario_avatar"></div>
-        <% if (user) { %>
-            <p>Bem-vindo, <%= user.NOME_USUARIO_T01 %>!</p>
+    <div  class="usuario">
+        <a href="/usuario">
+        <div class="usuario_avatar"> </div>
+            <% if (user) { %>
+                <p>Bem-vindo, <%= user.NOME_USUARIO_T01 %>!</p>
             <% } else { %>
                 <p>Usuário não logado.</p>
-                <% } %>
+            <% } %>
+        </a>
     </div>
 
     <ul class="menuInicio">
