--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -191,12 +191,13 @@ body {
 .alinhaMenu{
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
 }
 
 .conteudo{
     background-color: #E1E2EA;
     width: 100%;
+    
 }
 
 
@@ -205,21 +206,39 @@ body {
 .agendaCentraliza {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    border-radius: 10px;
+    border-radius: 30px;
     width: 700px;
     height: 500px;
     margin: auto;
     margin-top: 5%;
+    padding: 5%;
     border: 2px solid #6C6464;
 }
 
-.btnCa {
+.header {
+    display: flex;
+    justify-content: space-between; /* espaço entre as setas e o título */
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.header h2.tituloMes {
+    font-weight: 300;
+    font-size: 22px;
+    margin: 0;
+    flex: 1;
+    text-align: center;
+}
+
+.mudarE,
+.mudarD {
     background: none;
     border: none;
-    font-size: 20px;
+    font-size: 24px;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
+    width: 30px;
 }
 
 .weekdays {
@@ -228,28 +247,198 @@ body {
     width: 100%;
     font-weight: bold;
     margin-top: 10px;
+    font-weight: 200;
 }
 
 .days {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    gap: 5px;
-    margin-top: 10px;
+    gap: 9%;
+    margin-top: 5%;
 }
 
 .day {
-    width: 30px;
-    height: 30px;
+    width: 40px;
+    height: 40px;
     border-radius: 50%;
     background: white;
-    border: 1px solid gray;
+    border: 1px solid #6C6464;
     cursor: pointer;
+    text-align: center;
+    margin-bottom: 30%;
 }
+.day-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  
 
-.day.selected {
-    background: #c490e4;
-}
+.day-content.selected {
+    background-color: #c490e4;
+    color: white;
+  }
 
+
+
+
+  /* aqui vou fazer o dashboaard */
+
+  .painel {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 30px;
+    align-items: center;
+    margin-left: 5%;
+    margin-top: 3%;
+  }
+
+  .box {
+    background: #fbe6f9; 
+    border-radius: 20px;
+    padding: 30px; 
+    box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+    min-height: 400px; 
+  }
+
+  canvas {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .valor {
+    font-size: 32px;
+    font-weight: bold;
+    background-color: #81c8f8;
+    border-radius: 20px;
+    display: inline-block;
+    padding: 8px 20px;
+    color: black;
+    margin-bottom: 10px;
+  }
+
+  .titulo {
+    margin-bottom: 10px;
+    font-weight: 500;
+  }
+
+  .centraliza {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* aqui eu vou fazera as anotações */
+
+  .notas-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    
+  }
+
+  .nota {
+    background-color: #efccfc;
+    border-radius: 20px;
+    padding: 20px;
+    width: 300px;
+    height: 350px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    margin-left: 4%;
+    margin-top: 5%;
+  }
+
+  .nota h3 {
+    margin-top: 0;
+    font-size: 18px;
+  }
+
+  .nota ul {
+    padding-left: 20px;
+    margin-top: 10px;
+  }
+
+  .botao-add {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 60px;
+    height: 60px;
+    font-size: 28px;
+    background-color: #e2a8f8;
+    color: black;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .botao-add:hover {
+    background-color: #da94f5;
+  }
+
+  /* aqui o pomodoro */
+
+  .pomoH {
+    font-size: 20px;
+    margin-bottom: 10px;
+    color: #333;
+  }
+
+  #timer {
+    font-size: 80px;
+    font-weight: 200;
+    margin: 20px 0;
+  }
+
+  .cycles {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-bottom: 30px;
+  }
+
+  .cycle-dot {
+    width: 25px;
+    height: 25px;
+    border: 2px solid #555;
+    border-radius: 50%;
+  }
+
+  .logo {
+    font-family: 'Pacifico', cursive;
+    font-size: 40px;
+    color: #7ab6f5;
+    margin: 30px 0;
+  }
+
+  .buttons {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
+
+  .buttons button {
+    width: 50px;
+    height: 50px;
+    font-size: 24px;
+    border-radius: 50%;
+    border: 2px solid #000;
+    background: none;
+    cursor: pointer;
+  }
+
+  .buttons button:hover {
+    background-color: #ddd;
+  }
 
 /* aqui a landing page */
 
