--- a/api/view/index.ejs
+++ b/api/view/index.ejs
@@ -1,14 +1,15 @@
 <%- include('partials/header', { title: 'Página Inicial' }) %>
-<%- include('partials/header2') %>
-<div class="alinhaMenu">
-    <%- include('partials/menuItens') %> 
+    <%- include('partials/header2') %>
+        <div class="alinhaMenu">
+            <%- include('partials/menuItens') %>
 
+                <div class="conteudo">
+                    <main>
 
-    <main>
-    
-        <p class="aaaaaaaaaaa">index principal</p>
-    </main>
-</div>
+                        <p class="aaaaaaaaaaa">index principal</p>
+                    </main>
+                </div>
 
-</body>
-</html>
+                </body>
+
+                </html>
