--- a/api/public/css/style.css
+++ b/api/public/css/style.css
@@ -362,6 +362,26 @@ body {
     margin-top: 10px;
   }
 
+  .nota {
+  position: relative;
+  padding-bottom: 30px;
+}
+
+.nota-actions {
+  position: absolute;
+  bottom: 5px;
+  right: 10px;
+  display: flex;
+  gap: 10px;
+  
+}
+.nota-actions button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+}
+
   .botao-add {
     position: fixed;
     bottom: 30px;
@@ -381,10 +401,78 @@ body {
   }
 
   .botao-add:hover {
-    background-color: #da94f5;
+    background-color: #e2a8f8;
   }
 
+.form-anotacao {
+  background-color: #C5DADD; 
+  border-radius: 10px;
+  padding: 20px;
+  width: 600px;
+  margin: 30px auto 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-anotacao input[type="text"] {
+  border: none;
+  border-bottom: 1px solid #333;
+  background: transparent;
+  font-size: 16px;
+  padding: 5px;
+  outline: none;
+}
+
+.form-anotacao textarea {
+  border: none;
+  background: transparent;
+  font-size: 15px;
+  padding: 10px;
+  height: 150px;
+  resize: none;
+  outline: none;
+}
+
+.form-anotacao .toolbar {
+  display: flex;
+  gap: 15px;
+  font-weight: bold;
+  border-bottom: 1px solid #444;
+  padding-bottom: 5px;
+}
+
+.form-anotacao .toolbar button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.form-anotacao button[type="submit"] {
+  align-self: flex-end;
+  background-color: #b6dce0;
+  border: none;
+  border-radius: 10px;
+  padding: 10px 15px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.form-anotacao button[type="submit"]:hover {
+  background-color: #a0cfd3;
+}
   /* aqui o pomodoro */
+
+  .pomodoro-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+}
 
   .pomoH {
     font-size: 20px;
@@ -396,6 +484,7 @@ body {
     font-size: 80px;
     font-weight: 200;
     margin: 20px 0;
+
   }
 
   .cycles {
@@ -412,21 +501,21 @@ body {
     border-radius: 50%;
   }
 
-  .logo {
-    font-family: 'Pacifico', cursive;
-    font-size: 40px;
+  .logoPomo {
+    font-family: "Inspiration";
+    font-size: 100px;
     color: #7ab6f5;
     margin: 30px 0;
   }
 
-  .buttons {
+  .buttonsPomo {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 20px;
   }
 
-  .buttons button {
+  .buttonsPomo button {
     width: 50px;
     height: 50px;
     font-size: 24px;
@@ -436,7 +525,7 @@ body {
     cursor: pointer;
   }
 
-  .buttons button:hover {
+  .buttonsPomo button:hover {
     background-color: #ddd;
   }
 
